--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "displayName": "IP Address",
   "description": "Shows IP addresses in status bar and inserts into your text",
   "version": "1.0.0",
-  "publisher": "Compulim",
+  "publisher": "bout",
   "engines": {
-    "vscode": "^1.11.0"
+    "vscode": "^1.30.0"
   },
   "icon": "icon.png",
   "galleryBanner.color": "#0D5CAB",
   "repository": {
     "type": "git",
-    "url": "https://github.com/compulim/vscode-ipaddress.git"
+    "url": "https://github.com/hernad/vscode-ipaddress.git"
   },
-  "bugs": "https://github.com/compulim/vscode-ipaddress/issues/",
-  "homepage": "https://github.com/compulim/vscode-ipaddress/blob/master/README.md",
+  "bugs": "https://github.com/hernad/vscode-ipaddress/issues/",
+  "homepage": "https://github.com/hernad/vscode-ipaddress/blob/master/README.md",
   "keywords": [
+    "eShell",
     "ip address",
     "ipv4",
     "ipv6"
@@ -24,7 +25,7 @@
     "Other"
   ],
   "activationEvents": [
-    "*"
+    "onCommand:ipAddress.insertIPAddress"
   ],
   "main": "./extension",
   "contributes": {
@@ -40,12 +41,12 @@
     "test": "node ./node_modules/vscode/bin/test"
   },
   "devDependencies": {
-    "typescript": "^2.0.3",
-    "vscode": "^1.0.0",
-    "mocha": "^2.3.3",
-    "eslint": "^3.6.0",
+    "@types/mocha": "^2.2.32",
     "@types/node": "^6.0.40",
-    "@types/mocha": "^2.2.32"
+    "eslint": "^3.6.0",
+    "mocha": "^2.3.3",
+    "typescript": "^3.2.2",
+    "vscode": "^1.0.0"
   },
   "dependencies": {
     "immutable": "^3.7.6",
