--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vscode-ipaddress",
-  "displayName": "IP Address",
-  "description": "Shows IP addresses in status bar and inserts into your text",
-  "version": "1.0.2",
+  "displayName": "IP adrese.bout",
+  "description": "Prikaz IP adresa u status baru",
+  "version": "1.0.3",
   "publisher": "bout",
   "engines": {
     "vscode": "^1.30.0"
